<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/diskonEditText"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/biayaAsliEdit"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/diskonText"
            app:layout_constraintTop_toBottomOf="@+id/biayaAsliEdit" />

        <TextView
            android:id="@+id/biayaAsliText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biaya_asli"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.098" />

        <TextView
            android:id="@+id/diskonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diskon"
            app:layout_constraintBottom_toBottomOf="@+id/diskonEditText"
            app:layout_constraintStart_toStartOf="@+id/biayaAsliEdit"
            app:layout_constraintTop_toTopOf="@+id/diskonEditText"
            app:layout_constraintVertical_bias="0.527" />

        <Button
            android:id="@+id/buttonHitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hitung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diskonEditText" />

        <EditText
            android:id="@+id/biayaAsliEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biayaAsliText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:text="@string/biaya_diskon"
            app:layout_constraintBottom_toBottomOf="@+id/biayaSetelah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/biayaSetelah"
            app:layout_constraintTop_toTopOf="@+id/biayaSetelah"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/biayaSetelah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="56dp"
            android:text="@string/biaya_setelah_diskon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/hasilBiayaSetelah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="26dp"
            android:text="000,00"
            app:layout_constraintStart_toStartOf="@+id/biayaSetelah"
            app:layout_constraintTop_toBottomOf="@+id/biayaSetelah" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="18dp"
            android:text="000,00"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHitung" />

        <Button
            android:id="@+id/buttonSelengkap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/selengkapnya"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/textSelengkapnya"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSelengkap"
            app:layout_constraintEnd_toStartOf="@+id/buttonSelengkap"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonSelengkap"
            app:layout_constraintVertical_bias="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>